--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,10 +4,18 @@
 }
 .nav-bar {
   position: relative;
+  height: 10dvh;
   ul {
     li {
       a {
         font-weight: 500;
+        cursor: pointer;
+        text-decoration: none;
+        color: black;
+        opacity: 0.7;
+      }
+      a:hover {
+        opacity: 1;
       }
       button {
         background: #0e95d9e3;
