Organize assets, update styles, connect with real API,
- Moved images into a dedicated /images folder
- Adjusted color styles for improved consistency
- Connected movie data fetching from mock to real API
- Created and styled <Grade /> component for future use

--- a/src/components/MovieSelection/MovieSelection.css
+++ b/src/components/MovieSelection/MovieSelection.css
@@ -15,16 +15,32 @@
       font-weight: 500;
       display: flex;
       align-items: center;
+      justify-content: space-between;
+      color: var(--primary-color);
+
+      .grade-title-area {
+        display: flex;
+        align-items: center;
+      }
 
       img {
         margin-right: 8px;
         width: 28px;
         border-radius: 4px;
       }
+      /* .grade-badge {
+        margin-right: 8px;
+      } */
+      .check {
+        display: none;
+        width: 20px;
+      }
+      .check.selected {
+        display: block;
+      }
     }
   }
   ul a.selected {
-    font-weight: bold;
-    color: #ff4d4f;
+    color: var(--accent-color-red);
   }
 }
