--- a/src/components/ScheduleSelectArea/ScheduleSelectArea.css
+++ b/src/components/ScheduleSelectArea/ScheduleSelectArea.css
@@ -15,6 +15,13 @@
         width: 24px;
         margin-right: 8px;
       }
+      /* .grade-badge {
+        margin: unset;
+        margin-right: 8px;
+        font-weight: 100;
+        font-size: 20px;
+        padding: 0px 6px;
+      } */
     }
     .time-select-wrapper {
       display: grid;
