--- a/src/components/TheaterSelection/TheaterSelection.css
+++ b/src/components/TheaterSelection/TheaterSelection.css
@@ -13,6 +13,20 @@
       text-decoration: none;
       padding-left: 1rem;
       font-weight: 500;
+      color: var(--primary-color);
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      .check {
+        display: none;
+        width: 20px;
+      }
+      .check.selected {
+        display: block;
+      }
     }
+  }
+  ul a.selected {
+    color: var(--accent-color-red);
   }
 }
