--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+:root {
+  --primary-color: rgb(42, 104, 174);
+  --accent-color-red: rgb(255, 0, 0);
+  --text-color: #333;
+  --background-color: #f9f9f9;
+  --success-color: #4caf50;
+  --error-color: #f44336;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -5,6 +14,11 @@
 }
 button {
   box-shadow: none;
+  background-color: var(--primary-color);
+  /* border: var(--primary-color); */
+}
+button:hover {
+  /* background-color: rgb(38, 90, 150); */
 }
 html {
   overflow-y: scroll;
