--- a/src/pages/ReservationPage/ReservationPage.css
+++ b/src/pages/ReservationPage/ReservationPage.css
@@ -16,13 +16,13 @@
       }
     }
     .middle {
-      border-left: 1px solid black;
+      /* border-left: 1px solid black; */
       .movie-selection {
         max-height: calc(100dvh - 10dvh - 68px);
       }
     }
     .right {
-      border-left: 1px solid black;
+      /* border-left: 1px solid black; */
 
       .schedule-selection {
         overflow: auto;
@@ -49,8 +49,11 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: rgb(1, 127, 192);
+      background-color: var(--primary-color);
       color: white;
     }
   }
+}
+::-webkit-scrollbar {
+  display: none;;
 }
