--- a/src/pages/SeatSelectionPage/SeatSelectionPage.css
+++ b/src/pages/SeatSelectionPage/SeatSelectionPage.css
@@ -11,6 +11,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    .max-people {
+      position: absolute;
+      right: 2rem;
+      font-size: 14px;
+      color: white;
+    }
   }
   .bottom {
     /* color: black; */
@@ -18,7 +25,7 @@
       display: grid;
       grid-template-columns: 1fr 3fr;
       padding: 0.5rem 2rem;
-      background-color: azure;
+      background-color: rgb(238, 245, 245);
 
       .seat-page-movie-info {
         display: flex;
@@ -90,6 +97,21 @@
         }
       }
     }
+    .message {
+      display: grid;
+      justify-content: center;
+      color: white;
+      font-size: 16px;
+      margin-top: 12px;
+      span {
+        display: grid;
+        justify-content: center;
+      }
+      .target-message {
+        font-size: 12px;
+      }
+
+    }
     .seat-view {
       .theater-layout {
       }
@@ -99,6 +121,7 @@
       justify-content: center;
       align-items: center;
       padding: 0 2rem;
+      padding-bottom: 1rem;
       gap: 20rem;
       color: white;
       font-size: 16px;
@@ -110,7 +133,6 @@
       }
       button {
         padding: 8px 12px;
-        background-color: rgb(0 94 184);
         border: none;
       }
     }
