--- a/src/pages/PaymentPage/PaymentPage.css
+++ b/src/pages/PaymentPage/PaymentPage.css
@@ -89,6 +89,9 @@
     border: 1px solid lightgray;
     border-radius: 4px;
   }
+  .selected-method {
+    box-shadow: 0px 0px 4px var(--primary-color);
+  }
 }
 .area-label,
 .discount-input-area {
