--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   --primary-color: rgb(42, 104, 174);
   --button-hover-color: rgb(38, 90, 150);
   --accent-color-red: rgb(255, 0, 0);
-  --text-color: #333;
+  --text-color: rgb(55, 60, 68);
   --background-color: #f9f9f9;
   --success-color: #4caf50;
   --error-color: #f44336;
