--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,6 +1,12 @@
 .navbar-wrapper {
   background: rgb(224, 227, 231);
 }
+.home-page-main {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  min-height: 90dvh;
+}
 .slider {
   width: 1600px;
   max-width: 100%;
