--- a/src/components/PaymentCanlcelHistory/PaymentCancelHistory.css
+++ b/src/components/PaymentCanlcelHistory/PaymentCancelHistory.css
@@ -24,7 +24,9 @@
       }
     }
     .history-main-wrapper {
-      max-height: calc(100dvh - 10dvh - 245px);
+      max-height: calc(
+        100dvh - 10dvh - 65px - 32px - 21px - 8px - 51px - 16px - 52px
+      );
       overflow: auto;
       .history-main {
         border: 1px solid gray;
@@ -119,13 +121,24 @@
             font-weight: 500;
             padding: 8px 12px;
             cursor: pointer;
-            /* border-radius: 0 0 12px 0; */
           }
           .cancel-history-delete:hover {
             background-color: var(--primary-color);
             color: white;
           }
         }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  .payment-cancel-history-main {
+    .history-wrapper {
+      .history-main-wrapper {
+        max-height: calc(
+          100dvh - 10dvh - 65px - 32px - 21px - 8px - 51px - 16px - 32px
+        );
       }
     }
   }
