MovieManage, ScheduleManage, UserManage구현

--- a/src/pages/AdminPage/AdminPage.css
+++ b/src/pages/AdminPage/AdminPage.css
@@ -1,12 +1,15 @@
-.sales-page {
+.admin-page {
   display: flex;
   align-items: center;
   min-height: 100dvh;
 }
 .side-bar {
-  background-color: rgb(78 141 211);
+  background-color: var(--admin-primary-color);
   min-height: 100dvh;
   width: 10dvw;
+  position: sticky;
+  top: 0;
+  bottom: 0;
 
   .logo-wrapper {
     margin-bottom: 1rem;
@@ -24,19 +27,29 @@
       list-style: none;
       font-weight: 500;
       cursor: pointer;
-      padding:0 4px;
+      padding: 0 4px;
     }
     .selected-tab {
-      color: rgb(78 141 211);
+      color: var(--admin-primary-color);
       background-color: white;
       border-radius: 12px;
-      
     }
-    
   }
 }
 
-
-.sales-page-main {
+.admin-page-main {
   background-color: rgb(231, 229, 229);
+}
+
+@media screen and (max-width: 1300px) {
+  .side-bar {
+    .logo-wrapper {
+      margin-bottom: 12px;
+    }
+    ul {
+      li {
+        font-size: 18px;
+      }
+    }
+  }
 }
