--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
   --primary-color: rgb(42, 104, 174);
+  --admin-primary-color: rgb(78, 141, 211);
   --button-hover-color: rgb(38, 90, 150);
   --accent-color-red: rgb(255, 0, 0);
   --text-color: rgb(55, 60, 68);
