--- a/src/pages/PaymentPage/PaymentPage.css
+++ b/src/pages/PaymentPage/PaymentPage.css
@@ -20,7 +20,7 @@
   .poster-area {
     display: flex;
     justify-content: center;
-    .poster-image {
+    .poster-img {
       height: 400px;
       border-radius: 12px;
     }
